--- a/src/app/producto/components/crear/crear.component.html
+++ b/src/app/producto/components/crear/crear.component.html
@@ -1,5 +1,5 @@
 <i (click)="closeModal()" class="bi bi-x-square fs-3 text-danger float-end"></i>
-<h1>Agregar Producto</h1>
+<h1>Agregar </h1>
   <form [formGroup]="saveForm" (ngSubmit)="save()" id="updateProductForm">
     <div class="form-group">
       <label for="productName"> Producto:</label>
