--- a/src/app/producto/components/lista/lista.component.scss
+++ b/src/app/producto/components/lista/lista.component.scss
@@ -13,7 +13,7 @@
     justify-content: flex-end;
     position: relative;
     width: 100%;
-    background-color: grey;
+    background-color: rgb(128, 128, 128);
     border-radius: 8px;
     align-items: center;
     cursor: pointer;
@@ -118,5 +118,5 @@
   color: rgb(184, 50, 50);
 }
 .up{
-  color: rgb(177, 177, 32);
+  color: rgb(6, 6, 6);
 }
