--- a/src/app/public/footer/footer.component.html
+++ b/src/app/public/footer/footer.component.html
@@ -1,18 +1,15 @@
 <footer class="main-footer">
   <div class="container">
     <div class="footer-info">
-      <h3>Contactanoss</h3>
-    
-      <h6>telefono: 3216549873</h6>
-
-      <h6>Dirección: rio de oro</h6>
-    
-      <p>Email: {{email}}</p>
+      <h3>Contactanos</h3>
+      <h6>Teléfono: 3216549873</h6>
+      <h6>Dirección: Río de Oro</h6>
     </div>
     <div class="social-links">
-      <h3>Síguenos</h3>
+      <h3>Visítanos</h3>
       <a href="https://www.facebook.com/">Facebook</a>
       <a href="https://www.instagram.com/?hl=es">Instagram</a>
+      <a href="https://www.whatsapp.com/?lang=es_LA" class="whatsapp-btn">WhatsApp</a>
     </div>
   </div>
 </footer>
